--- a/index.html
+++ b/index.html
@@ -32,17 +32,10 @@
       <section>
         <h3>Welcome to DialerView.</h3>
 
+This app demonstrates simply menu as dialer view. If any suggestions can be appreciated.Thankking and happy coding.
 
 
 
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
   </body>
